# mutualism-net

./: .gitignore  README.md  pyproject.toml
mutualism_net/: Dockerfile  manage.py
mutualism_net/home/migrations/: 0003_homepage_body.py
mutualism_net/mutualism_net/: wsgi.py
mutualism_net/mutualism_net/settings/: base.py  dev.py
mutualism_net/mutualism_net/templates/: base.html
tests/: test_mutualism_net.py
