[tool.poetry]
name = "mutualism-net"
version = "0.1.0"
description = ""
authors = ["dtluna <dtluna@riseup.net>"]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^2.9"
django-bootstrap4 = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
